2022-03-14 Gabriele Gorla <gorlik@yahoo.com>

	* support/regression/tests/gcc-torture-execute-20021120-1.c:
	  Make stack-auto exception only for mos6502 port. Enable test for S08 and HC08.

2022-03-14 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* support/regression/tests/bitintarith.c:
	  Disable part of test for pdk14 to not run out of code memory.
	* src/z80/gen.c,
	  support/regression/tests/bitintbitfield.c,
	  support/regression/tests/widebitintbitfield.c:
	  Fix write to wide bit-field on z80.

2022-03-14 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/SDCCval.c:
	  Use unsigned long long to represent bit-field values at compile time.
	* src/mcs51/main.c:
	  Enable _BitInt for mcs51.
	* support/regression/tests/bitintarith.c,
	  support/regression/tests/bug-3355.c:
	  Test for bug #3355 (disabled for now).
	* src/ds390/main.c,
	  src/ds390/gen.c:
	  _BitInt for ds390.
	* src/z80/gen.c,
	  support/regression/tests/bitintarith.c:
	  Fix a z80 _BitInt decrement issue.

2022-03-14 Gabriele Gorla <gorlik@yahoo.com>

	* src/mod6502/gen.c:
	  Make regInfoStr display SP relative values when appropriate.
	  Additional improvements to genAddrOf().

2022-03-13 Gabriele Gorla <gorlik@yahoo.com>

	* support/regression/tests/gcc-torture-execute-20021120-1.c:
	  Make large local allocation static when compiling with --stack-auto.

2022-03-13 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/as6500/r65pst.c,
	  sdas/as6808/m08pst.c,
	  sdas/as8051/i51pst.c,
	  sdas/as8xcxxx/ds8pst.c,
	  sdas/aspdk13/pdk13pst.c,
	  sdas/aspdk14/pdk14pst.c,
	  sdas/aspdk15/pdk15pst.c,
	  sdas/aspdk16/pdk16pst.c,
	  sdas/asrab/rabpst.c,
	  sdas/asstm8/stm8pst.c,
	  sdas/astlcs90/t90pst.c,
	  sdas/asz80/z80pst.c:
	  Enable new mnemonics on all ports.

2022-03-12 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* support/regression/tests/bitintarith.c,
	  src/pdk/main.c: